...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BT4-jW-zoP">
                                <rect key="frame" x="220" y="790" width="170" height="55"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                <state key="normal" title="EVAL"/>
                                <connections>
                                    <action selector="evalButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="c1S-1N-heS"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="j7o-Pe-jT2">
                                <rect key="frame" x="28" y="195" width="94" height="92"/>
...
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SMw-yt-gLq">
                                <rect key="frame" x="28" y="567" width="100" height="98"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="27"/>
                                <state key="normal" title="+/-">
                                    <color key="titleColor" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                </state>
                                <connections>
                                    <action selector="signButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="uhi-iY-pGb"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d7F-0j-wnj">
                                <rect key="frame" x="28" y="790" width="165" height="55"/>
                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="18"/>
                                <state key="normal" title="ENTER">
                                    <color key="titleColor" red="0.17452169861248581" green="0.87305699481865284" blue="0.32809771835741491" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="enterButtonTap:" destination="BYZ-38-t0r" eventType="touchUpInside" id="ScT-vp-llY"/>
                                </connections>
                            </button>
...
